--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:green;">Java Home Web Application!!!! Praveen you rock..</h1>
+  <h1 style="color:green;">Java Home Web Application!!!! Capstone project completed. Thankyou Simplilearn team..</h1>
 </div>
 
 </body>
